# brokewise

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  docker-compose.yml  gunicorn_config.py  models.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
static/css/: custom.css
static/js/: app.js
templates/: base.html  index.html
tests/: test_app.py
