[project]
name = "brokewise-proj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nanoid>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
indent-width = 4
line-length = 100
exclude = [                        # Commonly ignored directories
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
]
fixable = ["ALL"]                  # Fix enabled rules when `--fix` is provided

[tool.ruff.format]
quote-style = "double"             # Use double quotes
indent-style = "space"             # Indent with spaces
skip-magic-trailing-comma = false  # Keep trailing commas
line-ending = "auto"               # Detect the appropriate line ending
